2003-10-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c:
	* drawing.h:
	* mahjongg.c (load_map): Split the geometry calculations so that
	the bits which are not window-size dependent are separate and only
	calculated once. Also made sure that the geometry is recalculated
	when the map changes.

	* drawing.c: Fixed the background colour problem.

2003-10-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c
	* mahjongg.schemas.in
	* mahjongg.h
	* mahjongg.c: Save and restore the window size. Also make
	auto-apply preferences work again.

2003-09-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: 
	* mahjongg.c:
	* mahjongg.h:
	* drawing.c:
	* drawing.h:
	* *.png:
	* mahjongg.schemas.in
	* gnome-canvas-pimage.*
	* default.svg: A brand-new drawing subsystem that supports
	rescaling and all that crap. It is faster by about a factor of
	five and takes up less memory. The old foreground/background
	system has been dumped in favour of a monolithic tileset. SVG
	graphics are also now supported (and preferred). All the old
	graphics are now obsolete and have been removed. There is a new
	version of the png based default theme. Unfortunately
	there is only one svg graphics set and it isn't very good. Also
	gnome-canvas-pimage.* has been removed and we have drawing.*
	instead.

Wed Aug 27 15:06:19 2003  Jonathan Blandford  <jrb@redhat.com>

	* mahjongg.c (bg_changed_cb): if you're going to add -ansi to
	CFLAGS, you need to use ansi-compatible comments.
	(tileset_changed_cb): Ditto

2003-08-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* solubility.c: Optimisations. Thats 10k shaved off, which amounts
	to about, oh, 0.3% of its RSS.

2003-08-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* solubility.c (walk_tree): Fixed a silly bug which meant that the
	last two tiles couldn't be removed. So much for the testing I
	thought I was doing.

2003-08-24  Callum McKenzie  <callum@physics.otago.ac.nz>
