@@ -151,9 +151,6 @@ Iagno:
 
 Mahjongg:
         - Finish off scaling support. Make new themes.
-          - Why do some top-row tiles on the hard level disappear when
-            I click them when the game is first launched, but not after
-            "new game" is selected ?
           - Rebuild seta.png
           - Fix up the tile search function for speed.
           - Make resizing a bit snappier (check the graphics scaling code, I
